# libpartialzip-1

./: .autotools  .cproject  .project  AUTHORS  Makefile.am  configure.ac  libpartialzip-1.0.pc.in
include/: Makefile.am
include/libpartialzip-1.0/: libpartialzip.h
src/: Makefile.am  libpartialzip.c
tools/: Makefile.am  partialzip.c
